--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <ul id="listaClientes">
         </ul>
     </main>
-    <script src="script.js"></script>
+    <script type="module" src="/js/app.js"></script>
 </body>
 </html>
